--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <label class="logo"><img src="https://cdn-icons-png.freepik.com/256/1013/1013069.png?semt=ais_hybrid" width="67.9px" height="63.68px"></label>
+        <label class="logo"><img src="https://cdn-icons-png.freepik.com/256/1013/1013069.png?semt=ais_hybrid"></label>
         <ul class="navbar">
             <li class="navcontent"><a href ="#s1">Home</a></li>
             <li class="navcontent"><a href ="#s2">About</a></li>
@@ -26,16 +26,16 @@
             <div class="character">
                 <ul class="char">
                     <li>
-                        <img src="gotoh.png" width="150.5px" height="199.5px">
+                        <img src="gotoh.png">
                     </li>
                     <li>
-                        <img src="nijika.png" width="150.5px" height="199.5px">
+                        <img src="nijika.png">
                     </li>
                     <li>
-                        <img src="ryo.png" width="157.5px" height="199.5px">
+                        <img src="ryo.png">
                     </li>
                     <li>
-                        <img src="ikuyo.png" width="157.5px" height="199.5px">
+                        <img src="ikuyo.png">
                     </li>
                 </ul>
             </div>
@@ -47,108 +47,108 @@
             <ul class="singles">
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/10/38/b1/1038b1be-83d4-c006-b612-e6156498da35/4534530140661.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/10/38/b1/1038b1be-83d4-c006-b612-e6156498da35/4534530140661.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, seisyun)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=7FDRQifEMUQ" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/6b/5f/15/6b5f1562-fbbd-614a-1fe4-0377e2c127df/4534530140630.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/6b/5f/15/6b5f1562-fbbd-614a-1fe4-0377e2c127df/4534530140630.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, distortion)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=5RSHNMkKGLs" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/61/61/f8/6161f8f6-9e39-b761-8aa3-037fa61879c5/4534530141088.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/61/61/f8/6161f8f6-9e39-b761-8aa3-037fa61879c5/4534530141088.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, karakara)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=IwHwv-lcxi4" target="_blank" >Play on YouTube</a>
                 </li>
                 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/5b/d3/ea/5bd3ea64-95f4-3fe2-4489-81c21e6ad58a/4534530141101.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/5b/d3/ea/5bd3ea64-95f4-3fe2-4489-81c21e6ad58a/4534530141101.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, guitar)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=SDk1RA4g8CA" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/c3/3d/62/c33d626c-877e-a397-3b9c-96de7980aa06/4534530141125.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/c3/3d/62/c33d626c-877e-a397-3b9c-96de7980aa06/4534530141125.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, whatswrong)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=BVvcQ4ge8Ow" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/6d/03/4f/6d034fd0-e05f-89a3-ed78-73670304340e/4534530141118.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/6d/03/4f/6d034fd0-e05f-89a3-ed78-73670304340e/4534530141118.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, thatband)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=q-bCp4MxuYU" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/e4/9e/a9/e49ea9f4-05f1-f0d2-a5ef-e5e30732ecef/4534530141804.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/e4/9e/a9/e49ea9f4-05f1-f0d2-a5ef-e5e30732ecef/4534530141804.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, rocknroll)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=E5O0mCrUdAM" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/20/de/18/20de1841-447f-b3de-3306-21c7f0d37d2f/4534530141798.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/20/de/18/20de1841-447f-b3de-3306-21c7f0d37d2f/4534530141798.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, neverforget)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://youtu.be/yiHexptwQ2Q" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/9a/4b/de/9a4bdeae-1c70-4538-c3cd-89121e234f2f/4534530141811.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/9a/4b/de/9a4bdeae-1c70-4538-c3cd-89121e234f2f/4534530141811.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, constellation)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=rXRvs_FrwEk" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/80/4a/7c/804a7cbf-92b6-249e-1461-bfb4cc8f7eed/4534530145130.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/80/4a/7c/804a7cbf-92b6-249e-1461-bfb4cc8f7eed/4534530145130.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, intolight)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=omckrS77vDo" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/80/4a/7c/804a7cbf-92b6-249e-1461-bfb4cc8f7eed/4534530145130.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music126/v4/80/4a/7c/804a7cbf-92b6-249e-1461-bfb4cc8f7eed/4534530145130.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, bluespring)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://www.youtube.com/watch?v=BN1ofrqIl9I" target="_blank" >Play on YouTube</a>
                 </li>
 
                 <li class="songs">
-                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/51/3b/00/513b003d-5583-4533-168b-f213c245b53f/4534530141828.jpg/316x316bb.webp" height="195" width="195"/>
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Music122/v4/51/3b/00/513b003d-5583-4533-168b-f213c245b53f/4534530141828.jpg/316x316bb.webp"/>
                     <button onclick="playAudio(this, hitoribocchi)" type="button" class="playPause">
-                        <img src="play_icon.png" width="16px" height="16px">
+                        <img class="playb" src="play_icon.png">
                     </button>
                 </br>
                     <a href="https://youtu.be/7TovqLDCosk" target="_blank" >Play on YouTube</a>
